--- a/ref.bib
+++ b/ref.bib
@@ -10,6 +10,69 @@
   YEAR   = 2019
 }
 
+@misc{michel_rotse1_new_wuma_eclipsing_binary_2016,
+	title = {{ROTSE}1 J164341.65+251748.1: a new W {UMa}-type eclipsing binary},
+	url = {http://arxiv.org/abs/1606.03464},
+	doi = {10.48550/arXiv.1606.03464},
+	shorttitle = {{ROTSE}1 J164341.65+251748.1},
+	abstract = {{ROTSE}1 J164341.65+251748.1 was photometrically observed in the V band during three epochs with the 0.84-m telescope of the San Pedro M{\textbackslash}'artir Observatory in Mexico. Based on additional {BVR} photometry, we find that the primary star has a spectral type around G0V. The light curve of the system is typical of a W{\textasciitilde}{UMa} type binary stars and has an orbital period of \${\textbackslash}sim\$ 0.323 days. In an effort to gain a better understanding of the binary system and determine its physical properties, we analyzed the light curve with the Wilson and Devinney method. We found that {ROTSE}1 J164341.65+251748.1 has a mass ratio of \${\textbackslash}sim\$ 0.34 and that the less massive component is over 230 K hotter than the primary star. The inclination of the system is \${\textbackslash}sim\$ 84.6 degrees, and the \{{\textbackslash}bf degree\} of over-contact is 11{\textbackslash}\%. The analysis shows the presence of variable bright spots on the primary star.},
+	number = {{arXiv}:1606.03464},
+	publisher = {{arXiv}},
+	author = {Michel, R. and Echevarria, J. and Cang, T. and Fox-Machado, L. and Gonzalez-Buitrago, D.},
+	urldate = {2024-04-11},
+	date = {2016-06-10},
+	eprinttype = {arxiv},
+	eprint = {1606.03464 [astro-ph]},
+	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+	file = {arXiv Fulltext PDF:/home/ramon/Zotero/storage/R6WT2TBE/Michel et al. - 2016 - ROTSE1 J164341.65+251748.1 a new W UMa-type eclip.pdf:application/pdf;arXiv.org Snapshot:/home/ramon/Zotero/storage/XTTYJ7RJ/1606.html:text/html},
+}
+
+@article{michel_photometric_study_contact_binary_2023,
+	title = {{PHOTOMETRIC} {STUDY} {OF} {TWO} {CONTACT} {BINARY} {SYSTEMS} {AND} A {DETACHED} {LATE} {DWARF} + M {DWARF} {COMPONENTS}},
+	volume = {59},
+	doi = {10.22201/ia.01851101p.2023.59.01.09},
+	abstract = {The results of our study of the eclipsing binary systems {AF} {LMi}, {CzeV}188 and {CRTS} J073333.0+302556 based on new {CCD} B, V, {RC}, {IC} complete light curves, are here presented. The short periods of these systems are confirmed and revised. The light curves were modeled using the latest version of the {WilsonDevinney} code and, as a result, we found that {AF} {LMi} (G3+G9) and {CzeV}188 (K0+K1) are W {UMa}-type contact binary systems belonging to the W subclass, showing a shallow degree of fill-out with components in good thermal contact. {CRTS} J073333.0+302556 is a detached binary system composed by a late dwarf (K8) and an M6 dwarf spectral type components. The asymmetries of the light curves were accounted for with a spot on the surface of one of the component. The absolute elements of the three objects were estimated.},
+	pages = {123--135},
+	journaltitle = {Revista Mexicana de Astronomía y Astrofísica},
+	shortjournal = {Revista Mexicana de Astronomía y Astrofísica},
+	author = {Michel, Raul and Barani, Carlo and Martignoni, M. and Acerbi, Francesco and Altamirano-Dévora, L.},
+	date = {2023-04-01},
+	file = {Full Text PDF:/home/ramon/Zotero/storage/AAM6P6S6/Michel et al. - 2023 - PHOTOMETRIC STUDY OF TWO CONTACT BINARY SYSTEMS AN.pdf:application/pdf},
+}
+
+@thesis{ibanez_cvs_wide_field_surveys_2021,
+	title = {Cataclysmic Variables in Wide Field Surveys},
+	url = {https://ui.adsabs.harvard.edu/abs/2021PhDT.........5I},
+	abstract = {Las Variables Cataclísmicas ({CV} por sus siglas en inglés) son sistemas binarios que interactúan entre sí, compuestos por una enana blanca y una estrella secundaria, típicamente una enana roja. La secundaria transfiere material através del punto interno de Lagrange y suele formar un disco de acreción que rodea a la enana blanca.La evolución de las {CVs} está impulsada por la pérdida de momento angular, pasando de períodos orbitales largos a períodos orbitales cortos. Su evolución prosigue de esta manera hasta alcanzar el período mínimo a {\textasciitilde}78min. Además, hay un descenso abrupto en el número de sistemas con períodos entre 2h y 3h, el ¿period gap¿. Por debajo del gap, el principal mecanismo de pérdida de momento angular se rige por la radiación gravitatoria, mientras que por encima de él, domina el frenado magnético. No obstante, existen discrepancias entre teoría y observaciones y se hace necesario contar con una población más amplia y conocida de {CVs} para resolverlas. En esta tesis se ha realizado un análisis de las magnitudes absolutas de las {CVs} para dar continuidad a la comprensión de la evolución de estos sistemas. Posteriormente, se presentan varias metodologías para encontrar nuevos sistemas, utilizando una combinación de varios cartografíados de gran campo.},
+	type = {phdthesis},
+	author = {Ibáñez, Javier Abril},
+	urldate = {2024-04-04},
+	date = {2021-01-01},
+	note = {Pages: 2021
+	Publication Title: Ph.D. Thesis
+	{ADS} Bibcode: 2021PhDT.........5I},
+}
+
+@article{skelton_modelling_wuma_variable_stars_2009,
+	title = {Modelling of W {UMa}-type variable stars},
+	volume = {105},
+	doi = {10.4102/sajs.v105i3/4.62},
+	abstract = {W Ursae Majoris (W {UMa})-type variable stars are over-contact eclipsing binary stars. To understand how these systems form and evolve requires observations spanning many years, followed by detailed models of as many of them as possible. The All Sky Automated Survey ({ASAS}) has an extensive database of these stars. Using the {ASAS} V band photometric data, models of W {UMa}-type stars are being created to determine the parameters of these stars. This paper discusses the classification of eclipsing binary stars, the methods used to model them as well as the results of the modelling of {ASAS} 1200363915.6, an over-contact eclipsing binary star that appears to be changing its period.},
+	pages = {120--126},
+	journaltitle = {South African Journal of Science},
+	shortjournal = {South African Journal of Science},
+	author = {Skelton, P.L. and Smits, D.},
+	date = {2009-04-01}
+}
+
+@online{samus_gcvs_variable_types_2016,
+	title = {{GCVS} Variability Types and Distribution Statistics of Designated Variable Stars According to their Types of Variability},
+	url = {http://www.sai.msu.su/gcvs/gcvs/vartype.htm},
+	author = {Samus, Nikolai},
+	urldate = {2024-04-10},
+	date = {2016-12}
+}
+
 @article{ding_fast_derivation_cbs_params_2022,
 	title = {Fast {Derivation} of {Contact} {Binary} {Parameters} for {Large} {Photometric} {Surveys}},
 	volume = {164},
