--- a/Tesis.tex
+++ b/Tesis.tex
@@ -23,13 +23,13 @@
 \usepackage[spanish,es-nodecimaldot]{babel}
 \usepackage[group-digits=true,group-minimum-digits=4]{siunitx}
 \usepackage{xcoffins}
-\usepackage{sty/annotate-equations}
+\usepackage{annotate-equations}
 \usepackage{mathtools}
 \usepackage[euler]{textgreek}
 \usepackage{titling}
 
 \usepackage{csquotes}
-\usepackage[style=authoryear, natbib=true]{biblatex}
+\usepackage[style=authoryear, natbib=true, backend=biber]{biblatex}
 \addbibresource[]{ref.bib}
 
 \ExplSyntaxOn
