Rounded values to 2 decimal points for more amenable text

--- a/Observaciones/Secciones/Fotometria.tex
+++ b/Observaciones/Secciones/Fotometria.tex
@@ -17,23 +17,23 @@ pudieron obtener datos de calidad aceptable.
 		\hline
 		\thead{Fecha} & \thead{HJD Inicio +\textbf{\num{2459000}}} & \thead{Tiempo Expocisiones} & \thead{Duración} \\
 		\hline
-		2022-10-21 & 874.6627527894452 & $114 \cdot 60$ s & 2.59 h \\
+		2022-10-21 & 874.66 & $114 \cdot 60$ s & 2.59 h \\
 		\hline
-		2022-10-27 & 880.7675264584832 & $93 \cdot 60$ s & 1.8616666666666666 h \\
+		2022-10-27 & 880.77 & $93 \cdot 60$ s & 1.86 h \\
 		\hline
-		2022-11-05 & 889.6711328472011 & $98 \cdot 60$ s & 2.0219444444444443 h \\
+		2022-11-05 & 889.67 & $98 \cdot 60$ s & 2.02 h \\
 		\hline
-		2022-11-26 & 910.7179540507495 & $56 \cdot 60$ s & 1.5502777777777779 h \\
+		2022-11-26 & 910.72 & $56 \cdot 60$ s & 1.55 h \\
 		\hline
-		2022-12-06 & 920.5510403933004 & $243 \cdot 60$ s & 4.900277777777778 h \\
+		2022-12-06 & 920.55 & $243 \cdot 60$ s & 4.90 h \\
 		\hline
-		2022-12-07 & 921.5630493750796 & $163 \cdot 60$ s & 4.201388888888889 h \\
+		2022-12-07 & 921.56 & $163 \cdot 60$ s & 4.20 h \\
 		\hline
-		2022-12-08 & 922.5338555905037 & $188 \cdot 60$ s & 5.570277777777778 h \\
+		2022-12-08 & 922.53 & $188 \cdot 60$ s & 5.57 h \\
 		\hline
-		2022-12-09 & 923.5413328357972 & $119 \cdot 60$ s & 5.328333333333333 h \\
+		2022-12-09 & 923.54 & $119 \cdot 60$ s & 5.33 h \\
 		\hline
-		2022-12-10 & 924.5309011922218 & $122 \cdot 60$ s & 2.202777777777778 h \\
+		2022-12-10 & 924.53 & $122 \cdot 60$ s & 2.20 h \\
 		\hline
 
 	\end{tabular}
