Started PHOEBE chapter, WIP

--- a/Introduccion/Introduccion.tex
+++ b/Introduccion/Introduccion.tex
@@ -5,6 +5,7 @@
 
 \input{Introduccion/Estrella.tex}
 \input{Introduccion/SistemasBinarios.tex}
+\input{Introduccion/Phoebe.tex}
 % \input{Introduccion/Subsecciones/VariablesCataclismicas.tex}
 % \input{Introduccion/Subsecciones/EnanaBlanca.tex}
 % \input{Introduccion/Subsecciones/EnanaRoja.tex}
