--- a/ref.bib
+++ b/ref.bib
@@ -10,6 +10,24 @@
   YEAR   = 2019
 }
 
+@article{li_extremely_low_mass_ratio_wd_analysis_2022,
+	title = {Extremely Low Mass Ratio Contact Binaries. I. The First Photometric and Spectroscopic Investigations of Ten Systems},
+	volume = {164},
+	issn = {0004-6256, 1538-3881},
+	url = {https://iopscience.iop.org/article/10.3847/1538-3881/ac8ff2},
+	doi = {10.3847/1538-3881/ac8ff2},
+	abstract = {The photometric and spectroscopic investigations of ten contact binaries were presented for the ﬁrst time. It is discovered that the mass ratios of all the ten targets are smaller than 0.15, they are extremely low mass ratio contact binaries. Seven of them are deep contact binaries, two are medium contact binaries, while only one is a shallow contact system. Five of them show the O’Connell effect, and a dark spot on one of the two components can lead to a good ﬁt of the asymmetric light curves. The orbital period studies of the ten binaries reveal that they all exhibit long-term period changes, six of them are increasing, while the others are shrinking. The {LAMOST} spectra were analyzed by the spectral subtraction method, and all the ten targets exhibit excess emissions in the Hα line, indicating chromospheric activity. The evolutionary states of the two components of the ten binaries were studied, and it is found that their evolutionary states are identical to those of the other contact binaries. Based on the study of the relation between orbital angular momentum and total mass, we discovered the ten systems may be at the late evolutionary stage of a contact binary. The initial masses of the two components and the ages of them were obtained. By calculating the instability parameters, we found that the ten contact binaries are relatively stable at present.},
+	pages = {202},
+	number = {5},
+	journaltitle = {The Astronomical Journal},
+	shortjournal = {{AJ}},
+	author = {Li, Kai and Gao, Xiang and Liu, Xin-Yi and Gao, Xing and Li, Ling-Zhi and Chen, Xu and Sun, Guo-You},
+	urldate = {2024-04-23},
+	date = {2022-11-01},
+	langid = {english},
+	file = {Li et al. - 2022 - Extremely Low Mass Ratio Contact Binaries. I. The .pdf:/home/ramon/Zotero/storage/3WE5UESY/Li et al. - 2022 - Extremely Low Mass Ratio Contact Binaries. I. The .pdf:application/pdf},
+}
+
 @misc{michel_rotse1_new_wuma_eclipsing_binary_2016,
 	title = {{ROTSE}1 J164341.65+251748.1: a new W {UMa}-type eclipsing binary},
 	url = {http://arxiv.org/abs/1606.03464},
@@ -186,6 +204,23 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
 	month = feb,
 	year = {1970},
 	note = {ADS Bibcode: 1970SAOSR.309.....K}
+}
+
+@article{wilson_devinney_realization_of_accurate_binary_lcs_wd_1971,
+	title = {Realization of Accurate Close-Binary Light Curves: Application to {MR} Cygni},
+	volume = {166},
+	issn = {0004-637X},
+	url = {https://ui.adsabs.harvard.edu/abs/1971ApJ...166..605W},
+	doi = {10.1086/150986},
+	shorttitle = {Realization of Accurate Close-Binary Light Curves},
+	abstract = {A general procedure for computing monochromatic light curves of close eclipsing-binary systems is presented, with allowance for rotational and tidal distortion, the reflection effect, limb darkening, and gravity darkening. All basic techniques used to compute light curves are specified. Solution of the inverse problem (finding the elements from observations) is accomplished by differential corrections, and probable errors are obtained for all adjustable parameters. No rectification of any kind is used or needed. Because of the basic flexibility of the scheme, present limitations (e.g., synchronous rotation only, black- body physics) may be improved upon with reasonable convenience, as time permits. The procedure has been applied to B and V observations of {MR} Cyg, and the results of the differential corrections adjustments are given. With the use of available spectroscopic observations and model-atmosphere results by Mihalas, the components are placed in the H-R diagram. Although the primary seems to be on the main sequence, the secondary is found to be above the main sequence an observation which suggests that the secondary may still be in the gravitational-con traction phase.},
+	pages = {605},
+	journaltitle = {The Astrophysical Journal},
+	author = {Wilson, Robert E. and Devinney, Edward J.},
+	urldate = {2024-04-23},
+	date = {1971-06-01},
+	note = {Publisher: {IOP}
+{ADS} Bibcode: 1971ApJ...166..605W}
 }
 
 @book{kallrath_eclipsing_binary_modelling_2009,
